feat: Add Field to farm
- Implemented Validate field size (0.1 - 50% of farm area)  logic.

JIRA: CIT-46